--- a/src/main/filters/prod.properties
+++ b/src/main/filters/prod.properties
@@ -8,4 +8,6 @@ db.url=jdbc:mysql://localhost:3306/${db.database}
 db.reset.allowed=false
 db.driver=com.mysql.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
-log4j.default.log.level=INFO
+
+#log4j.default.log.level=info
+log4j.default.log.level=DEBUG
