--- a/src/main/filters/prod.properties
+++ b/src/main/filters/prod.properties
@@ -2,8 +2,8 @@
 url.capture=http://demo.fosstrak.org/epcis/capture
 url.query=http://demo.fosstrak.org/epcis/query
 db.database=epcis
-db.username=epcis
-db.password=epcis
+db.username=root
+db.password=root
 db.url=jdbc:mysql://localhost:3306/${db.database}
 db.reset.allowed=false
 db.driver=com.mysql.jdbc.Driver
